@@ -995,7 +995,7 @@ if test "x$PLATFORM" = "xIRIX" -a "x$USE_GCC" != "xyes" ; then
    tweek_64_flags='-64'
 fi
 
-jars='Tweek.jar TweekBeans.jar TweekEvents.jar TweekNet.jar TweekBeanDelivery.jar TweekServices.jar kunststoff-mod.jar metouia.jar'
+jars='Tweek.jar TweekBeans.jar TweekEvents.jar TweekNet.jar TweekBeanDelivery.jar TweekServices.jar kunststoff-mod.jar metouia.jar looks.jar'
 ext_jars='wizard.jar ui.jar'
 
 if test "x$JDOM_JAR" != "xnone" ; then
